arreglado eliminar imagen y autoagregar host a propiedad

--- a/tpMetodIII/templates/hotel/home.html
+++ b/tpMetodIII/templates/hotel/home.html
@@ -27,6 +27,7 @@
         <li>
             <p>{{ ownership.title }}</p>
             <p>{{ ownership.rate }}</p>
+            <p>Host Email: {{ ownership.host.email }}</p>
             <img src="{{ownership.cover}}" alt="{{ownership.title}}" />
         </li>
         {% endfor %}
