--- a/tpMetodIII/templates/hotel/home.html
+++ b/tpMetodIII/templates/hotel/home.html
@@ -1,39 +1,42 @@
 <!doctype html>
 {% load static from staticfiles %}
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Changa&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <title>Home</title>
 </head>
+
 <body>
-    <h1>Hello</h1>
 
-    <h2>Cities</h2>
-    <ul>
-        {%  for city in cities %}
-        <li>
-            {{ city.name }}
-        </li>
-        {% endfor %}
-    </ul>
+    <main class="main">
 
-    <h2>Ownerships</h2>
-    {% if ownerships %}
-    <ul>
-        {% for ownership in ownerships %}
-        <li>
-            <p>{{ ownership.title }}</p>
-            <p>{{ ownership.rate }}</p>
-            <p>Host Email: {{ ownership.host.email }}</p>
-            <img src="{{ownership.cover}}" alt="{{ownership.title}}" />
-        </li>
-        {% endfor %}
-    </ul>
-    {% else %}
-    <h3>No hay propiedades</h3>
-    {% endif %}
+        {% if ownerships %}
+        <div class="ownerships">
+            {% for ownership in ownerships %}
+            <div class="ownership-card">
+                <img class="ownership-image" src="{{ownership.cover}}" alt="{{ownership.title}}">
+                <div class="ownership-body">
+                    <div class="ownership-details">
+                        <span class="ownership-amount-pax">Max. Pax: {{ ownership.amount_pax }}</span>
+                    </div>
+                    <p class="ownership-title">{{ ownership.title }}</p>
+                    <span class="ownership-rate">${{ ownership.rate }} por noche</span>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+        {% else %}
+        <h3>No hay propiedades</h3>
+        {% endif %}
+    </main>
+
+    <script type="text/javascript"></script>
 </body>
+
 </html>
