--- a/tpMetodIII/static/css/style.css
+++ b/tpMetodIII/static/css/style.css
@@ -2,20 +2,20 @@ body{
     font-family: sans-serif;
 }
 
-
-
 .ownerships{
     padding:10px;
     display: grid;
     column-gap: 5px;
     row-gap: 5px;
-    grid-template-columns: repeat(auto-fit, minmax(19rem,1fr));
+    grid-template-columns: repeat(auto-fill, minmax(14rem,1fr));
 }
 
 .ownership-card{
+    text-decoration: none;
+    color:#232323;
     cursor: pointer;
     padding:20px;
-    width: 230px;
+    width: auto;
     background: #eee;
 }
 
@@ -51,5 +51,5 @@ body{
 .ownership-amount-pax{  
     font-family: 'Courier New', Courier, monospace;
     font-size: .97rem;
-    color: rgb(160, 111, 47)
+    color: rgb(160, 111, 47);
 }
