--- a/tpMetodIII/templates/hotel/ownership_details.html
+++ b/tpMetodIII/templates/hotel/ownership_details.html
@@ -1,24 +1,64 @@
 <!doctype html>
-<html lang="en">
+{% load static from staticfiles %}
+
+<html lang="en" xmlns:rental_dates>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="{%  static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/ownership-details.css' %}">
     <title>{{ ownership.title }}</title>
 </head>
+
 <body>
-    <h1>{{ ownership.title }}</h1>
+
+    <main>
+
+        <h1 style="text-align: center;">{{ ownership.title }}</h1>
+        <div class="ownership-details-body">
+            <div class="ownership-details-image">
+                <img src="/{{ownership.cover}}" alt="{{ownership.title}}">
+            </div>
+            <div class="ownership-details-description">
+                <p>
+                    {{ownership.description}}
+                </p>
+            </div>
+            <div class="ownership-details-book">
+                <div class="book-rate-info">
+                    <div class="book-rate">${{ ownership.rate }}</div>
+                    <div class="book-inline-text">por noche</div>
+                    <form class="book-form" action="/hotel/book" method="POST">
+                        {% csrf_token %}
+                        <input type="text" name="name" placeholder="First Name" required>
+                        <input type="text" name="lastname" placeholder="Last Name" required>
+                        <input type="email" name="email" placeholder="Email" required>
+                        <div class="book-dates">
+                            {% if rental_dates %}
+                            <p>Dias disponibles:</p>
+                            {% for date in rental_dates %}
+                            <div class="input-date">
+                                <input type="checkbox" name="date[]" value="{{ date.id }}"> {{ date.date }}
+
+                            </div>
+                            {% endfor %}
+                            {% endif %}
+                        </div>
+                        <button class="btn-book" type="submit"
+                            {{ rental_dates|yesno:',disabled=disabled' }}>Reservar</button>
+
+                    </form>
+
+                </div>
+            </div>
+        </div>
+
+    </main>
 
 
-    {% if rental_dates %}
-        <ul>
-            {% for date in rental_dates %}
-                <li>
-                    <input type="checkbox" name="date" value="{{ date.id }}"> {{ date.date }}
-                </li>
-            {% endfor %}
-        </ul>
-    {% endif %}
 </body>
+
 </html>
